# c_string

./: .readthedocs.yaml  README.rst
c_string/: CMakeLists.txt  c_string.c  c_string.h
c_string/include/: c_string.h
c_string/test/: CMakeLists.txt  test.c  test.h  test_string.c  test_string.h  test_vector.c  test_vector.h  unit_test.c
docs/doxygen/: requirements.txt
docs/doxygen/sphinx_docs/: Dict.rst  Macros.rst  String.rst  Vector.rst  conf.py  index.rst
scripts/Windows/: debug.bat  install.bat  static.bat
scripts/bash/: debug.sh  install.sh  static.sh
scripts/zsh/: build.zsh  compile.zsh  debug.zsh  install.zsh  static.zsh
